// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a Input with field marker 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--fill quill-input__wrapper__variant--fill--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          id="label"
          placeholder=""
          type="text"
          value=""
        />
        <label
          class="label label__status--neutral"
          for="label"
        >
          label
          <div
            class="label-field-marker label-field-marker__required--false"
          >
            (optional)
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render a default Input 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render a disabled Input with a variant of fill 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--fill quill-input__wrapper__variant--fill--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          disabled=""
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render an Input with a label 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          id="UserName"
          placeholder=""
          type="text"
          value=""
        />
        <label
          class="label label__status--neutral"
          for="UserName"
        >
          UserName
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render an Input with a variant of outline 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render an Input with centered text 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--center input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input should render an Input with status messages 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--neutral quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="message__container message__container--md message__container__status--neutral"
    >
      <span
        class="message__container__text"
      >
        Message goes here
      </span>
    </div>
  </div>
</div>
`;
